few refactoring +thread safe notification service